clusters/cluster.boem/traefik/ingresses/as216455.net/as216455.net.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: as216455.net
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`as216455.net`)
      services:
        - kind: Service
          name: sting-as-site
          namespace: default
          port: 80
      middlewares:
        - name: hsts
          namespace: traefik

    - kind: Rule
      match: Host(`rpki.as216455.net`)
      services:
        - kind: Service
          name: krill-http
          namespace: default
          port: 3000

    - kind: Rule
      match: Host(`dns.as216455.net`)
      services:
        - name: pdns-admin
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`nms.as216455.net`)
      services:
        - name: librenms
          namespace: default
          port: 8000

    - kind: Rule
      match: Host(`flux-webhook.as216455.net`)
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80

    - kind: Rule
      match: Host(`tilesgl.as216455.net`)
      services:
        - name: tiles
          namespace: traefik
          port: 8080

    - kind: Rule
      match: Host(`tilespostserve.as216455.net`)
      services:
        - name: tiles
          namespace: traefik
          port: 8090

    - kind: Rule
      match: Host(`maputnik.as216455.net`)
      services:
        - name: tiles
          namespace: traefik
          port: 8088

  tls:
    secretName: as216455.net-prod-tls
