clusters/cluster.boem/traefik/ingresses/as216455.net/i.as216455.net.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: i.as216455.net
  namespace: traefik
spec:
  entryPoints:
    - internal
    - internalsecure
  routes:
    - kind: Rule
      match: Host(`i.as216455.net`) || Host(`pve.i.as216455.net`)
      services:
        - kind: Service
          name: pve
          namespace: traefik
          port: 8006

  tls:
    secretName: i.as216455.net-prod-tls
