clusters/cluster.boem/traefik/ingresses/as216455.net/kluster.i.as216455.net.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kluster.i.as216455.net
  namespace: traefik
spec:
  entryPoints:
    - internal
    - internalsecure
  routes:
    - kind: Rule
      match: Host(`netbox.kluster.i.as216455.net`)
      services:
        - name: internals-vm
          namespace: default
          port: 8000

  tls:
    secretName: kluster.i.as216455.net-prod-tls
