clusters/cluster.boem/traefik/ingresses/as216455.net/s3.kluster.i.as216455.net.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: s3.kluster.i.as216455.net
  namespace: traefik
spec:
  entryPoints:
    - internal
    - internalsecure
  routes:
    - kind: Rule
      match: Host(`s3.kluster.i.as216455.net`)
      services:
        - name: rook-ceph-rgw-ceph-objectstore
          namespace: rook-ceph
          port: 80
    - kind: Rule
      match: Host(`*.s3.kluster.i.as216455.net`)
      services:
        - name: rook-ceph-rgw-ceph-objectstore
          namespace: rook-ceph
          port: 80

  tls:
    secretName: s3.kluster.i.as216455.net-prod-tls
